# RANBAL

./: .gitignore  README.md  example.py  pyproject.toml
conversions/: co_to.py  conv01.py  from_ranks_numbers_to_LH.py  from_ranks_to_LH.py  scores_to_ranks.py  scores_to_ranks2.py  transp_cand_in_columns.py  transp_cand_in_rows.py  transpose_ranks_into_scores.py
ranbal/: LICENSE  README.md  __init__.py  __main__.py  random_ballots.py
starvote-master/: example.py
starvote-master/Adam/: b.starvote
starvote-master/starvote/: __init__.py  __main__.py
starvote-master/test_elections/: test_election_all_threes_bloc_star.starvote
starvote-master/test_elections/Adam/: 2nd_round_02.csv  2nd_round_02.starvote  FairVote_ex_01.starvote  FairVote_ex_02.starvote  FairVote_ex_03.starvote  Over_50_percent_bloc.starvote  Over_50_percent_bloc_tie.starvote  Over_50_percent_star.starvote  Over_50_percent_star_tie.starvote  RCV_amplification1.starvote  RCV_amplification2.starvote  YouTube_ex_01.starvote  YouTube_ex_02_PBS.starvote  a.starvote  c.csv  coto.starvote  csv_test.csv  csv_test.starvote  cw_ties.starvote  d.csv  e.csv  epr-voter-data-v2.csv  epr-voter-data-v2.starvote  prop02.starvote  social_utility_efficiency_SUE.starvote  temp.starvote  test_election_bloc_star_and_electowiki2.starvote  y.starvote
starvote-master/test_elections/csv/: starvote_ballots_eurovision_song_contest_2023.csv
starvote-master/tests/: Casper.py  cer.py  harness.py  run_tests.py
starvote-master/tools/: is_ok  remake_test_elections_output
test_ranbal/: test_basic_01
(+4 files in other folders)
