[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "ranbal"
authors = [
    {name = "Adam Masiarek", email = "masiarek@gmail.com"},
    ]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
dynamic = [
    'version',
    'description',
    ]

[project.urls]
Source = "https://github.com/masiarek/RANBAL/"
